<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#007583"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="83dp">

        <Button
            android:id="@+id/button6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/headerView"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <Button
            android:id="@+id/btnback"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:background="?attr/actionModeCloseDrawable"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/headerView"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <ImageView
            android:id="@+id/headerView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/colorAccent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="144dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/notices"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@+id/headerView"
            app:layout_constraintEnd_toStartOf="@+id/button6"
            app:layout_constraintHorizontal_bias="0.46"
            app:layout_constraintStart_toEndOf="@+id/btnback"
            app:layout_constraintTop_toTopOf="@+id/headerView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="#ffffff"
                android:entries="@array/Subject"
                android:prompt="@string/class1" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="#ffffff"
                android:entries="@array/gread"
                android:prompt="@string/class1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/time"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/hall_number"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/class_teacher"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:srcCompat="@drawable/logo"
                android:contentDescription="@string/todo" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>