<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#007583"
    tools:context=".NoticeFeedback">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnback"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="?attr/actionModeCloseDrawable"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/headerView"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/logo"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="@+id/headerView"
                    app:layout_constraintTop_toTopOf="@+id/textView2" />

                <ImageView
                    android:id="@+id/headerView"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:contentDescription="@string/todo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@color/colorAccent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="178dp"
                    android:layout_height="48dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/feedback"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="35sp"
                    app:layout_constraintBottom_toBottomOf="@+id/headerView"
                    app:layout_constraintEnd_toStartOf="@+id/button6"
                    app:layout_constraintStart_toEndOf="@+id/btnback"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/fbnameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="#ffff"
                android:textColorHint="#ffff"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/PhoneText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="@string/Phone"
                android:inputType="text|phone"
                android:importantForAutofill="no"
                android:textColor="#ffff"
                android:textColorHint="#ffff" />

            <EditText
                android:id="@+id/msgText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="@string/text_area"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textAlignment="viewStart"
                android:textColor="#ffff"
                android:textColorHint="#ffff"
                android:textSize="20sp" />


            <Button
                android:id="@+id/subbtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/submit" />

            <Button
                android:id="@+id/Clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/reset" />

            <Button
                android:id="@+id/fbview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/view_feedback" />

        </LinearLayout>
    </ScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="183dp">

        <Button
            android:id="@+id/btnH"
            android:layout_width="52dp"
            android:layout_height="54dp"
            android:background="@drawable/home"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnA"
            app:layout_constraintEnd_toStartOf="@+id/btnA"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnA"
            android:layout_width="52dp"
            android:layout_height="54dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/attendace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnP"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnH"
            app:layout_constraintTop_toTopOf="@+id/view" />


        <Button
            android:id="@+id/btnP"
            android:layout_width="52dp"
            android:layout_height="54dp"
            android:background="@drawable/pay"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnA"
            app:layout_constraintEnd_toStartOf="@+id/btnN"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnA" />

        <Button
            android:id="@+id/btnN"
            android:layout_width="52dp"
            android:layout_height="54dp"
            android:background="@drawable/noticesicon"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnP"
            app:layout_constraintEnd_toStartOf="@+id/btnpf"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnP" />

        <Button
            android:id="@+id/btnpf"
            android:layout_width="52dp"
            android:layout_height="54dp"
            android:background="@drawable/profile"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnN" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#2196F3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>